--- a/res/layout/list_workouts_item.xml
+++ b/res/layout/list_workouts_item.xml
@@ -3,14 +3,20 @@
 
 	android:id="@+id/mainlayout" 
 	android:layout_width="fill_parent"
-	android:layout_height="70px"
+	android:layout_height="70dp"
 	
 	android:orientation="vertical" 
 	xmlns:android="http://schemas.android.com/apk/res/android" 
 	android:background="#ccc" >
-	
-	<ImageView android:layout_height="70px" android:layout_width="fill_parent" android:src="@drawable/trainings_list_item_bck" android:scaleType="fitEnd" />
-	<ImageView android:layout_height="70px" android:layout_width="fill_parent" android:src="@drawable/trainings_list_item_bck" android:scaleType="matrix"/>
+	
+	<ImageView
+	    android:layout_width="fill_parent"
+	    android:layout_height="fill_parent"
+	    android:layout_gravity="top"
+	    android:scaleType="fitEnd"
+	    android:src="@drawable/trainings_list_item_bck" />
+
+	<!-- <ImageView android:layout_height="70dp" android:layout_width="fill_parent" android:src="@drawable/trainings_list_item_bck" android:scaleType="matrix"/> -->
 	
 	
 	
@@ -18,13 +24,13 @@
 		android:id="@+id/workout_order"
 		style="@style/darkGray20dp"
 		android:layout_height="wrap_content"
-		android:layout_width="30px" />
+		android:layout_width="30dp" />
 		
 		
 	<LinearLayout
 		xmlns:android="http://schemas.android.com/apk/res/android" 
 		android:layout_width="fill_parent"
-		android:layout_height="70px"		
+		android:layout_height="70dp"		
 		android:orientation="vertical">
 		
 		<TextView
@@ -40,13 +46,12 @@
 			android:layout_height="wrap_content" />
 	
 	</LinearLayout>	
-	
-	
+	
 	<LinearLayout
-		android:layout_width="fill_parent"
-		android:layout_height="70px"		
-		android:orientation="vertical" 
-		xmlns:android="http://schemas.android.com/apk/res/android">
+	    xmlns:android="http://schemas.android.com/apk/res/android"
+	    android:layout_width="fill_parent"
+	    android:layout_height="fill_parent"
+	    android:orientation="vertical" >
 
 		<TextView
 			android:id="@+id/workout_type"
