--- a/res/layout/list_trainings_item.xml
+++ b/res/layout/list_trainings_item.xml
@@ -1,34 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/mainlayout"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
     android:layout_height="70dp"
-    android:background="#ccc"
-    android:orientation="vertical" >
+    android:orientation="horizontal"
+    android:background="@drawable/trainings_list_item_bck"
+    android:weightSum="100"
+  >
 
-	<ImageView android:layout_height="70dp" android:layout_width="fill_parent" android:src="@drawable/trainings_list_item_bck" android:scaleType="fitEnd" />
-	
 	<!-- <ImageView android:layout_height="70dp" android:layout_width="fill_parent" android:src="@drawable/trainings_list_item_bck" android:scaleType="matrix"/>  -->
-	
-	<ImageView
-	    android:layout_width="fill_parent"
-	    android:layout_height="match_parent"
-	    android:layout_gravity="right"
-	    android:scaleType="fitEnd"
-	    android:src="@drawable/trainings_list_item_gray_box" />
 	
-	<LinearLayout 
-		android:layout_height="wrap_content" 
-		android:layout_width="wrap_content"
+	<LinearLayout
+		android:layout_height="wrap_content"
+		android:layout_width="0dp"
 		android:layout_gravity="left|center_vertical"
 		android:orientation = "horizontal"
-		android:layout_marginLeft="6dp">
-		
-		<TextView  
+		android:layout_marginLeft="6dp"
+        android:layout_weight="10">
+
+        <TextView
 		    android:id="@+id/list_item_num"
 		    style="@style/darkGray20dp"
-		    android:layout_gravity="bottom" 
-		    android:text="1" 
+		    android:text="1"
+            android:textColor="#000"
 		    android:layout_height="wrap_content" 
 		    android:layout_width="wrap_content" >
 	    </TextView>
@@ -36,42 +30,41 @@
 	
 	<LinearLayout
 		android:layout_height="wrap_content" 
-		android:layout_width="wrap_content"
+		android:layout_width="0dp"
+        android:layout_weight="60"
 		android:layout_gravity="left"
 		android:orientation = "vertical"
-		android:layout_marginLeft="40dp"		
-		android:layout_marginTop="12dp">    
+		android:paddingTop="10dp">
 	
 	    <TextView 
 		    android:id="@+id/name_entry"
 		    style="@style/darkGray20dp"
-		    android:layout_gravity="top|left"	   
-		    android:text="NAME" 
+		    android:layout_gravity="top|left"
+		    android:text="NAME"
 		    android:layout_height="wrap_content"
 		    android:layout_width="wrap_content" 		    
 		    android:maxLines="1">
 	    </TextView>
-	 
-	    <TextView 
+
+	    <TextView
 	    	android:id="@+id/description_entry"
-	    	style="@style/lightGray16dp" 
-	    	android:text="DESC" 
-	    	android:typeface="sans" 
-	    	android:textStyle="italic" 
-	    	android:textColor="#757575" 
-		    android:layout_gravity="bottom|left" 
-		    android:layout_height="wrap_content" 
+	    	android:text="asd asda sdads ads"
+		    android:layout_height="wrap_content"
 	    	android:layout_width="wrap_content"
-	    	android:textSize="18dp" android:maxLines="2">
-	    </TextView>	 
+	    	android:textSize="18dp"
+            android:maxLines="2">
+	    </TextView>
 	</LinearLayout>    
 	    
 	<LinearLayout
-			android:layout_height="70dp" 
-			android:layout_width="90dp"
+			android:layout_height="match_parent"
+			android:layout_width="0dp"
+            android:layout_weight="30"
 			android:layout_gravity="right"
 			android:orientation = "vertical"
-			android:paddingRight="15dp">    
+			android:paddingRight="15dp"
+            android:layout_marginRight="0dp"
+            android:background="@drawable/trainings_list_item_gray_box">
 		
 	    <TextView 
 		    android:id="@+id/workoutsInTraining"
@@ -88,11 +81,9 @@
 		<TextView 
 		    android:id="@+id/duration"
 		    android:layout_marginTop="8dp"
-		    android:layout_gravity="right|center" 
-		    
+		    android:layout_gravity="right|center"
 		    android:layout_height="wrap_content" 
-		    android:layout_width="wrap_content" 
-		    
+		    android:layout_width="wrap_content"
 		    android:textStyle="normal" android:textColor="#FFF" 
 		    android:text="2min" 
 		    android:textSize="20dp">
@@ -101,11 +92,8 @@
 	</LinearLayout>
 	
 
-	    
-	    
-	    
-    
-</FrameLayout>
+
+</LinearLayout>
 
 
 
