--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -8,6 +8,13 @@
 	<style name="lightGray16dp">
         <item name="android:textColor">#8A8888</item>
         <item name="android:textSize">16dp</item>
-    </style>  
+    </style>
+
+    <style name="blackWithShadow">
+        <item name="android:textColor">#000000</item>
+        <item name="android:shadowColor">#cccccc</item>
+        <item name="android:shadowRadius">2</item>
+        <item name="android:textSize">20dp</item>
+    </style>
     
 </resources>
